--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -11,6 +11,10 @@
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap" rel="stylesheet">  
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Podkova:wght@400;500;600&display=swap" rel="stylesheet">
+  
   <!-- Styles -->
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'css/animate.css' %}">     
@@ -21,18 +25,15 @@
   <!-- Custom styles -->
   <link href="{% static 'style.css' %}" type="text/css" rel="stylesheet">
 </head>
-<body class="lines">
+<body>
  
  {% block header %}
  {% endblock %}
 
-<header class="hero-wrapper">
-    <div class="hero">
-      
-    </div>
-    {% block body %}
-    {% endblock %}
-</header>
+
+{% block body %}
+{% endblock %}  
+
  
 
  {% block footer %}
