--- a/catalogapp/templates/catalogapp/item.html
+++ b/catalogapp/templates/catalogapp/item.html
@@ -51,66 +51,21 @@
              <p class="mb-0 mobile16">Nullam neque massa, congue nec placerat in, ultricies ut purus. Nulla facilisi. Vivamus viverra facilisis dolor, nec faucibus justo varius vitae. Phasellus sagittis urna eget justo dictum tincidunt.</p>
              <p class="mb-1half"><span class="gram">Вес: {{ item.weight }}</span></p>
            </div>
+           <form action="{% url 'add_to_cart' slug=item.slug %}" method="post">
+            {% csrf_token %}
            <div class="row mb-1 h-100 align-items-center">
            <div class="col-sm-auto col-12">
            <div class="counteritem">
               <a href="#" class="sc-minus">-</a>
-                <input type="text" value="1">
+                <input type="text" name="quant" value="1">
               <a href="#" class="sc-plus">+</a>
             </div>
             </div>
             <div class="col-sm col-12 pt-1">
-            <button type="button" class="custom-button1 counteritem1" data-toggle="modal" data-target="#exampleModal1">
-              В КОРЗИНУ
-            </button> 
-            <!-- modal popup --> 
-            <div class="modal custom-modal fade bd-example-modal-lg" id="exampleModal1" tabindex="-1" role="dialog" aria-hidden="true">
-              <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <img src="{% static 'images/close2.png' %}" alt="close"/>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <h3 class="modaltitle">В КОРЗИНУ</h3>                   
-                  	  <div class="col-lg-12 text-left p-0">
-			                  <table class="table table-responsive-md">
-				                  <tbody>
-				                    <tr>
-					                    <td>
-					                    <div class="row product1 align-items-center">
-								                <div class="col-3">
-									                <img src="{% static 'images/product-image.png' %}" alt="..."/>
-								                </div>
-							                  <div class="col-9 pl-1">
-									                <h4>{{ item.name }}</h4>
-									                <span class="gram">345g</span>
-							                  </div>
-						                  </div>
-					                    </td>
-					                    <td> 
-                                <span class="cartprice">{{ item.price }}</span> 
-                              </td>
-					                    <td class="text-right">
-							                  <button><img src="{% static 'images/close2.png' %}" alt="close"/></button>								
-						                  </td>
-				                    </tr>				  
-				                  </tbody>
-			                  </table>
-                        <div class="row mt-1">
-                          <div class="col mt-1half text-right">
-                            <a href="{% url 'show_cart' %}" class="custom-button1 mr-0 mb-1">КОРЗИНА</a>		
-				                    <a href="#" class="custom-button3 ml-4">ПРОДОЛЖИТЬ</a>  
-				                  </div>
-                        </div>
-                      </div>
-                    </div>       
-                  </div>
-                </div>
-              </div>  
+              <button type="submit" class="custom-button1 ml-4">В КОРЗИНУ</button>              
             </div>
             </div>
+            </form>
             <p class="mb-0"><b>CATEGORY BURGERS</b></p>
             <p><b>SKU 123KJAS</b></p>
          </div>          
@@ -208,7 +163,7 @@
                         <div class="row mt-1">
                           <div class="col mt-1half text-right">
                             <a href="{% url 'show_cart' %}" class="custom-button1 mr-0 mb-1">КОРЗИНА</a>		
-				                    <a href="#" class="custom-button3 ml-4">ПРОДОЛЖИТЬ</a>  
+				                    <a href="{% url 'add_to_cart' slug=recommendation.slug %}" class="custom-button3 ml-4">ПРОДОЛЖИТЬ</a>  
 				                  </div>
                         </div>
                       </div>
