--- a/catalogapp/templates/catalogapp/list.html
+++ b/catalogapp/templates/catalogapp/list.html
@@ -31,56 +31,8 @@
 					</div>   
 					<h3 class="pricetitle1">{{ item.name }}</h3>
 
-					<h3 class="pricetitle">{{ item.price }}{% if item.old_price != 0 %}<span class="price">{{ item.old_price }}</span>{% endif %} </h3>
-					<button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal2">
-						Купить<span></span>
-					</button> 
-					<!-- modal popup --> 
-					<div class="modal custom-modal fade bd-example-modal-lg" id="exampleModal2" tabindex="-1" role="dialog" aria-hidden="true">
-						<div class="modal-dialog modal-lg" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<img src="{% static 'images/close2.png' %}" alt="close"/>
-									</button>
-								</div>
-								<div class="modal-body">
-									<h3 class="modaltitle">В КОРЗИНУ</h3>                   
-									<div class="col-lg-12 text-left p-0">
-										<table class="table table-responsive-md">
-											<tbody>
-												<tr>
-													<td>
-														<div class="row product1 align-items-center">
-															<div class="col-3">
-																<img src="{% static 'images/product-image.png' %}" alt="..."/>
-															</div>
-															<div class="col-9 pl-1">
-																<h4>{{ item.name }}</h4>
-																<span class="gram">345g</span>
-															</div>
-														</div>
-													</td>
-													<td> 
-														<span class="cartprice">{{ item.price }}</span> 
-													</td>
-													<td class="text-right">
-														<button><img src="{% static 'images/close2.png' %}" alt="close"/></button>								
-													</td>
-												</tr>				  
-											</tbody>
-										</table>
-										<div class="row mt-1">
-											<div class="col mt-1half text-right">
-												<a href="{% url 'show_cart' %}" class="custom-button1 mr-0 mb-1">КОРЗИНА</a>		
-												<a href="#" class="custom-button3 ml-4">ПРОДОЛЖИТЬ</a>  
-											</div>
-										</div>
-									</div>
-								</div>       
-							</div>
-						</div>
-					</div> 
+					<h3 class="pricetitle">{{ item.price }}{% if item.old_price != 0 %}<span class="price">{{ item.old_price }}</span>{% endif %} </h3>					
+					<a href="{% url 'add_to_cart' slug=item.slug %}" class="custom-button2a ml-4">КУПИТЬ</a>
 				</div>
 			</div>
 			{% endfor %}
