--- a/catalogapp/templates/catalogapp/item.html
+++ b/catalogapp/templates/catalogapp/item.html
@@ -64,10 +64,25 @@
             <div class="col-sm col-12 pt-1">
               <button type="submit" class="custom-button1 ml-4">В КОРЗИНУ</button>              
             </div>
+            </div>            
+            {% for additive in additives %}            
+            <div class="row h-100 align-items-center">
+           <div class="col-sm col-12">
+           <div class="counteritem">
+              <a href="#" class="sc-minus">-</a>
+                <input type="text" name="quant{{ forloop.counter }}" value="0">
+              <a href="#" class="sc-plus">+</a>
             </div>
-            </form>
-            <p class="mb-0"><b>CATEGORY BURGERS</b></p>
-            <p><b>SKU 123KJAS</b></p>
+            </div>
+            <div class="col-sm col-12 pt-1">
+              <h3 class="mb-1">{{ additive.price }}</h3>
+            </div>
+            <div class="col-sm col-12 pt-1">
+              <input type="hidden" name="item{{ forloop.counter }}" value="{{ additive.slug }}"><h3 class="pricetitle1">{{ additive.name }}</h3>
+            </div>
+            </div>          
+            {% endfor %}
+            </form>                        
          </div>          
        </div> 
      </div>  
