--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -53,7 +53,7 @@
                           <img src="{% static 'images/1.png' %}" alt="...">
                         </div>
                         <div class="col-8">
-                          <h4 class="mb-0">{{ item.good.name }}</h4> 
+                          <h4 class="mb-0">{{ item.offer.good.name }}</h4> 
                           <span>{{ item.quant }}</span>
                           <span>X</span>
                           <span>{{ item.price }}</span>
